fixed for readability

--- a/assets/style/popup.css
+++ b/assets/style/popup.css
@@ -24,7 +24,7 @@ body {
 }
 
 .modal-content {
-    font-family: 'fredoka one', cursive;
+    font-family: 'comic sans ms';
     font-size: 20px;
     background-color: rgb(16, 82, 16);
     margin: 15% auto;
